welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 /*def hunt(c:Color) {
     // Write your code here
 }*/

def hunt() {
   while(!estSurBiscuit){
   	if(isFacingTrail==true){
   	baisseBrosse();
   	leveBrosse();
   	avance();
   	}else{
   		gauche();
   	}  
}
baisseBrosse();
prendBiscuit();
}

def isFacingTrail(c:Color):Boolean = {
if(estFaceMur()==true){
	return false
}
avance();
if(getCouleurSol()==c){
	recule();
	return true
}else{
	recule();
	return false
}
} 

